# ai-core-capstone

./: README.md  pyproject.toml
airflow/: requirements.txt  values.yaml
dags/: __init__.py  daily_feature_build.py  daily_ingest.py
docker/airflow/: Dockerfile
docker/jobs-pyspark/: Dockerfile
docker/spark/: Dockerfile
docs/: architecture.md  debugging.md  demo_alignment.md  production-alignment.md  run.md  setup.md  tests.md
jobs/pyspark/: feature_job.py  ingest_job.py
jobs/tests/: conftest.py
scripts/: 00_minikube_up.sh  01_deploy_infra.sh  02_install_airflow.sh  05_trigger_run.sh  build_images.sh  run_unit_tests.sh
tests/: test_dag_imports.py  test_feature_job.py
